# bumpit

./: .gitignore  README.md  bumpchannelopen.py  bumpit.py  changes.patch  pyproject.toml  requirements-dev.txt  requirements.txt  test_bumpchannelopen.py  test_bumpchannelopen_main_parent_lowfee.py  test_bumpchannelopen_parent_higherfee.py  test_bumpchannelopen_parent_highfee.py  test_bumpchannelopen_parent_normalfee.py  test_child_highfee.py  test_child_veryhighfee.py  test_confirmed_bump.py  test_emergency_reserve.py  test_emergency_reserve_fee_arg.py  test_emergencyreserve.py  test_insufficientfunds.py  test_invalidUTXO.py  test_invalidinputs.py  test_parent_highfee.py  test_parent_highfeerate.py  test_parent_lower_fee.py  test_parent_lowfee.py  test_unreserve_on_error.py  test_unreserve_on_failure.py  test_yolo_mode.py  test_zeroreserve.py
